# multimodal-AD

./: .gitignore  .gitmodules  Project proposal.docx  README.md  analysis_1.ipynb  base_model.py  config.py  interpret_features.py  main.py  protein_feature_interpretation.py  protein_feature_vis.py  protein_model.py  pyproject.toml  run_wandb_sweep.sh  tabnet_model.py  train_fusion_slurm.sh
AD_CN/: BC_FNIH_Hu_Fagan.xlsx  BC_FNIH_Hu_Fagan_with_labels.xlsx  README.md  README.xlsx  calculate_data_size.ipynb
colab/: CV_FIX_INSTRUCTIONS.md  cross_attention.md  cross_attention_walkthrough.ipynb  image_baseline.py  mri_classification.ipynb  pca_feature_selection.ipynb  pretraining_example.ipynb  pretraining_proteomic.ipynb  protein_classification.ipynb  test.py  test_streamlined.py  unimodal_encoder_integration.ipynb
colab/deprecated/: cross_attention_walkthrough.ipynb
configs/: autoencoder_experiment.yml  default.yml  tabnet_experiment.yml
research_pipeline/image_classification/: README.md  __init__.py  config.py  dataset.py  evaluation.py  example_config.yaml  main.py  models.py  quality_control.py  training.py
src/integration/: README.md  __init__.py  fusion_model.py  mri_extractors.py  multimodal_dataset.py  preextract_protein_latents.py  protein_extractor.py  train_fusion.py  utils.py  wandb_sweep.py
src/protein/: LATENTS.md  PER_FOLD_PREPROCESSING_EXPLANATION.md  README.md  REFACTORING_SUMMARY.md  __init__.py  dataset.py  debug_attention.py  explain_shap.py  extract_latents.py  feature_utils.py  hparam_config.json  hparam_search.py  inference_test.py  main.py  model.py  model_loader.py  (+6 more)
test/: TESTING_GUIDE.md  test_data_pipeline.py  test_model_config.py  test_xai_loader.py
(+90 files in other folders)
