[project]
name = "multimodal"
version = "0.1.0"
description = "Multimodal Alzheimer's Disease Analysis"
authors = [
    {name = "ss8319", email = "shamussim@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.0",
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "seaborn>=0.13.2",
    "pyyaml>=6.0.2",
    "wget>=3.2",
    "einops>=0.8.1",
    "torch==2.8.0",
    "ipykernel>=6.30.1",
    "scikit-learn>=1.7.2",
    "monai==1.3.2",
    "nibabel==5.2.1",
    "pytorch-lightning==2.3.3",
    "torchmetrics==1.8.2",
    "wandb>=0.22.2",
    "xgboost>=3.0.5",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
dinov3 = [
    "ftfy",
    "omegaconf",
    "regex",
    "submitit",
    "termcolor",
    "transformers",
    "torchvision",
    "accelerate",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
